{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 64,
  "lineage": "25400d28-ea1b-ab54-5c81-d010029e1c2b",
  "resources": [
    {
      "module": "module.internetgateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:internet-gateway/igw-0760755e39423acdd",
            "id": "igw-0760755e39423acdd",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_gw"
            },
            "tags_all": {
              "Name": "kamil_gw"
            },
            "vpc_id": "vpc-0440c65694213d580"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-rta",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd20a3efb12ad53",
            "route_table_id": "rtb-0da189344b5010f7b",
            "subnet_id": "subnet-0820ec62a1fe3ccb1"
          },
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.pub_subnet.aws_subnet.subnets",
            "module.public-route.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-0820ec62a1fe3ccb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.167.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0820ec62a1fe3ccb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_pub_subnet"
            },
            "tags_all": {
              "Name": "kamil_pub_subnet"
            },
            "vpc_id": "vpc-0440c65694213d580"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:route-table/rtb-0da189344b5010f7b",
            "id": "rtb-0da189344b5010f7b",
            "owner_id": "485146087273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0760755e39423acdd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kamil_pub_rt"
            },
            "tags_all": {
              "Name": "kamil_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0440c65694213d580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-0971f9799076b5b0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0971f9799076b5b0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kamil_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f4ae3b91a18d6a7e"
              }
            ],
            "primary_network_interface_id": "eni-0f4ae3b91a18d6a7e",
            "private_dns": "ip-192-167-1-10.ec2.internal",
            "private_ip": "192.167.1.10",
            "public_ip": "54.161.221.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ce8a962ced64384",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820ec62a1fe3ccb1",
            "tags": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tags_all": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e9fcd8d0f54e37f"
            ]
          },
          "dependencies": [
            "module.pub_subnet.aws_subnet.subnets",
            "module.public_ec2.aws_network_interface.nic",
            "module.public_ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-0f4ae3b91a18d6a7e",
            "id": "eni-0f4ae3b91a18d6a7e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:b3:fc:63:05:c1",
            "owner_id": "485146087273",
            "private_ip": "192.167.1.10",
            "private_ip_list": [
              "192.167.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.167.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05e9fcd8d0f54e37f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820ec62a1fe3ccb1"
          },
          "dependencies": [
            "module.pub_subnet.aws_subnet.subnets",
            "module.public_ec2.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-05e9fcd8d0f54e37f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e9fcd8d0f54e37f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_pub_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_pub_ec2"
            },
            "tags_all": {
              "Name": "sg_for_pub_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0440c65694213d580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:vpc/vpc-0440c65694213d580",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.167.0.0/16",
            "default_network_acl_id": "acl-05d9189d37b577d7d",
            "default_route_table_id": "rtb-041f2bd177edc21fe",
            "default_security_group_id": "sg-0972bbb5f5b67c209",
            "dhcp_options_id": "dopt-033d2b1ddea21925e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0440c65694213d580",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041f2bd177edc21fe",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_vpc"
            },
            "tags_all": {
              "Name": "kamil_vpc"
            }
          }
        }
      ]
    }
  ]
}